Fixes desktop overflow problem

--- a/resources/sass/_desktop.scss
+++ b/resources/sass/_desktop.scss
@@ -17,6 +17,8 @@
         font-size: 20px;
         font-size: 1.666666666666667vw;
         margin: 0;
+        overflow: hidden;
+        width: 100vw;
     }
 
     .toggle,
